<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_list"
            android:icon="@drawable/ic_menu_my_list_24dp"
            android:title="@string/navigation_drawer_my_list" />
        <item
            android:id="@+id/nav_group_list"
            android:icon="@drawable/ic_menu_group_list_24dp"
            android:title="@string/navigation_drawer_group_list" />
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_menu_balance_24dp"
            android:title="@string/navigation_drawer_balance" />
    </group>

    <item android:title="@string/navigation_drawer_settings">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/account" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/navigation_drawer_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_24dp"
                android:title="@string/log_out" />
        </menu>
    </item>


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
</menu>